--- a/doss/package.json
+++ b/doss/package.json
@@ -48,6 +48,8 @@
   "devDependencies": {
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.15.1",
-    "@types/react-helmet": "^6.1.2"
+    "@types/react-helmet": "^6.1.2",
+    "@types/react-phone-number-input": "^3.0.11",
+    "react-phone-number-input": "^3.1.26"
   }
 }
